fix cards alignment

--- a/src/app.scss
+++ b/src/app.scss
@@ -19,8 +19,8 @@ $base-color: #1cb8ff;
 .wrapper {
   max-width: 1225px;
   box-sizing: border-box;
-  padding: 50px 15px 0;
+  padding: 50px 15px;
   margin: 0 auto;
   overflow: hidden;
-  min-height: calc(100vh - 188px);
+  min-height: calc(100vh - 376px);
 }
