--- a/src/components/content/Content.scss
+++ b/src/components/content/Content.scss
@@ -3,6 +3,12 @@
   flex-flow: row wrap;
   justify-content: space-between;
 
+  &:after{
+    content: "";
+    flex: auto;
+    max-width: 30%;
+  }
+
   @media screen and (max-width: 700px) {
     width: 100%;
     flex-direction: column;
